--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "core-js": "^3.8.3",
     "eslint-config-tram-one": "^4.0.0",
+    "gh-pages": "^3.2.3",
     "jest": "^26.6.3",
     "jest-environment-jsdom-fourteen": "^1.0.1",
     "jest-transform-css": "^2.1.0",
